--- a/free-nodes/page-8.htm
+++ b/free-nodes/page-8.htm
@@ -7,7 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>免费节点订阅，免费机场订阅 - Clash Node官网订阅站 - 第9页</title>
     <link rel="icon" href="/assets/website/img/clashnode/favicon.ico" type="image/x-icon"/>
-        <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
+    
+    <meta name="author" content="Clash Node官网订阅站">
+    <meta property="og:type" content="webpage" />
+    <meta property="og:url" content="https://clashnode.github.io/free-nodes/page-8.htm" />
+    <meta property="og:site_name" content="Clash Node官网订阅站" />
+    <meta property="og:title" content="免费节点订阅，免费机场订阅 - Clash Node官网订阅站 - 第9页" />
+    <meta property="og:image" content="/assets/website/img/clashnode/favicon.ico" />
+        
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/website/css/clashnode/style-starter.css">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8B9V1K3BBT"></script>
@@ -93,6 +101,23 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2024-11-09">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2024-11-9-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/e1cb19dc65fe145e5652417f9d9ba379.webp" alt="11月9日更新19.9M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2024-11-9-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">11月9日更新19.9M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了日本、韩国、加拿大、新加坡、美国、香港、欧洲等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                11月9日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2024-11-08">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -246,23 +271,6 @@
                                 10月31日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2024-10-30">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2024-10-30-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/5764f68424815c2ef26e500bb67a21d1.webp" alt="10月30日更新20.5M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点订阅" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2024-10-30-free-subscribe-node.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">10月30日更新20.5M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点订阅</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了加拿大、新加坡、香港、日本、美国、韩国、欧洲等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                10月30日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li><a href="/free-nodes/page-7.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li class="active"><span>8</span></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li><a href="/free-nodes/page-11.htm">11</a></li> <li><a href="/free-nodes/page-9.htm">&raquo;</a></li></ul>            </div>
@@ -272,8 +280,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-19952.htm">重庆宠物领养中心有哪些地址呢（重庆宠物领养重庆宠物赠送）</a></h4>
-                <p>摘要：       今天给各位分享重庆宠物领养中心有哪些地址呢的知识，其中也会对重庆宠物领养重庆宠物赠送进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、重庆有.</p>
+                <h4><a href="/news/article-39276.htm">猫咪3针疫苗一共多少元冬天打（猫咪三针疫苗需要多久）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈猫咪3针疫苗一共多少元冬天打，以及猫咪三针疫苗需要多久对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫需要打几针疫苗?多少钱?...  </p>
             </div>
         </div>
     </div>
@@ -282,8 +290,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-35854.htm">动物疫苗产业链 动物疫苗产业链全景展望</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗产业链的问题，于是小编就整理了2个相关介绍动物疫苗产业链的解答，让我们一起看看吧。智飞生物做什么的？哈药集团都生产销售什</p>
+                <h4><a href="/free-nodes/2024-11-25-node-share.htm">11月25日更新19.6M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、美国、加拿大、香港、日本、新加坡、欧洲等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -292,8 +300,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-20-free-ssr-subscribe.htm">12月20日更新22.5M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、韩国、新加坡、加拿大、日本、香港、美国等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-38287.htm">面试之Java String 编码相关</a></h4>
+                <p>另有一篇我的字符编码本质入门的文章见这里：https://www.cnblogs.com/uncleguo/p/16008551.html 　　实话说，作为一个多年Java老年程序员，直到近来，在没有</p>
             </div>
         </div>
     </div>
@@ -302,8 +310,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-6-free-node-subscribe-links.htm">12月6日更新19.7M/S，2024年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、日本、新加坡、欧洲、加拿大、韩国、香港等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-14-shadowrocket-node.htm">12月14日更新18.5M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、韩国、日本、美国、加拿大、新加坡等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -312,8 +320,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-1-free-subscribe-node.htm">12月1日更新22.2M/S，2024年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、欧洲、美国、香港、加拿大、新加坡、韩国等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-10-clash-windows.htm">10月10日更新21.7M/S，2024年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、美国、欧洲、新加坡、日本、香港、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -322,8 +330,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-25475.htm">动物预防接种计划表（动物预防接种实验报告）</a></h4>
-                <p>摘要：       今天给各位分享动物预防接种计划表的知识，其中也会对动物预防接种实验报告进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、怎样编制猪场防疫计划.</p>
+                <h4><a href="/free-nodes/2024-10-12-clash-windows.htm">10月12日更新22.4M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、加拿大、美国、韩国、新加坡、香港等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -332,8 +340,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-7-free-clash-subscribe.htm">11月7日更新19.1M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了美国、日本、新加坡、加拿大、欧洲、韩国、香港等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-13-free-clash.htm">10月13日更新18.1M/S，2024年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、美国、日本、欧洲、新加坡、香港、韩国等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -342,8 +350,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-1-9-clash-node.htm">1月9日更新18.7M/S，2025年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、日本、加拿大、美国、香港、欧洲、新加坡等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-25-shadowrocket-node.htm">10月25日更新18.5M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、加拿大、新加坡、韩国、香港、欧洲、日本等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -352,8 +360,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-32996.htm">vue实现拖拽排序、移除</a></h4>
-                <p>vue实现拖拽排序、可用于图片、模块交换位置  效果 以“首页模块”为例    录屏软件很卡，实际效果是非常流畅的  本质都一样，只不过一个是单行、一个是双列，使用的是vuedraggle组件vued</p>
+                <h4><a href="/news/article-34429.htm">宠物领养合同有法律效应吗 宠物领养合同有法律效应吗知乎</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物领养合同有法律效应吗的问题，于是小编就整理了5个相关介绍宠物领养合同有法律效应吗的解答，让我们一起看看吧。签订领养宠物协议靠</p>
             </div>
         </div>
     </div>
@@ -362,8 +370,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-30615.htm">动物疫苗生产许可（动物疫苗生产许可管理办法）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物疫苗生产许可，以及动物疫苗生产许可管理办法对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、给羊打疫苗的公司的行政许可手续...    </p>
+                <h4><a href="/free-nodes/2024-10-21-free-subscribe-node.htm">10月21日更新19.8M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、新加坡、加拿大、日本、欧洲、香港、韩国等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -374,7 +382,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">51</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">54</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
